[package]
name = "my_redis_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
broadcast = "0.1.0"
bytes = "1.7.1"
clap = { version = "4.5.4", features = ["derive"] }
ctor = "0.2.8"
lazy_static = "1.5.0"
tokio = { version = "1.39.2", features = ["full"] } 

[[bin]]
name = "my_redis_shell"
path = "src/bin/my_redis_shell.rs"

[[bin]]
name = "my_redis_repl"
path = "src/bin/my_redis_repl.rs"
